# Aster-Lang

./: .gitignore  .pre-commit-config.yaml  =1.3  AGENTS.md  BACKLOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RECOVERY.md  STATUS.md  pyproject.toml  setup-prj.cmd  setup-prj.ps1  setup-prj.sh  test_list
.github/workflows/: ci.yml
ai/: AIDER.md  CLAUDE_CODE.md  CODEX.md  GEMINI.md  README.md
docs/: DEVELOPER_GUIDE.md  ERROR-INDEX.md  USER_GUIDE.md
docs/examples/: EXAMPLES.md
docs/language/: FFI.md  LANGUAGE-OVERVIEW.md  LANGUAGE-REFERENCE.md  OWNERSHIP-AND-REFERENCES.md  railroad-diagram.md
docs/parser/: PARSER-ROADMAP.md  RAILROAD-GUIDE.md
docs/project/: COMPILER-C-IMPLEMENTATION.md  ENTERPRISE-BEST-PRACTICES.md  PROJECT-INTRO.md  RELEASE-STRATEGY.md  SOURCE-SPEC-UPLOADED.md
docs/toolchain/: CACHING.md  COMPILER-C-GCC.md  COMPILER.md  FORMATTER-STYLE.md  FORMATTER.md  INTERPRETER.md  LANGUAGE-SERVER-DEV.md  VM.md  (+4 more)
examples/: bench_sum.aster  closure_test.aster  destructure_demo.aster  ffi_test.aster  fstring_demo.aster  hello_c.aster  helpers.aster  http_demo.aster  list_test.aster  match_demo.aster  match_test.aster  net_demo.aster  record_test.aster  socket_demo.aster  string_test.aster  sum_to.aster  use_demo.aster
grammar/: aster-core.ebnf  aster-full.ebnf
scripts/: dev-check.ps1  dev-check.sh  git-commit-template.txt
tasks/: NEXT-STEPS.md  TASK-STATUS.md
tests/: test_ast_printer.py  test_backend.py  test_bench_runner.py  test_bytecode.py  test_c_backend.py  test_cache.py  test_cli.py  test_compiler.py  test_doc_gen.py  test_ffi.py  test_formatter.py  test_hir.py  test_http.py  test_interpreter.py  test_lexer.py  test_linalg.py  test_lsp_definition.py  test_lsp_diagnostics.py  test_lsp_hover.py  test_lsp_server.py  test_mir.py  test_native_modules.py  test_net.py  test_parser.py  test_path.py  test_pkg_manifest.py  test_pkg_semver.py  test_repl.py  test_semantic.py  test_socket.py  test_test_runner.py  test_vm.py
tutorials/: 01-getting-started.md  02-bindings-and-types.md  03-control-flow.md  04-functions.md  05-collections-and-records.md  06-match-basics.md  07-destructuring.md  08-modules-and-imports.md  09-lambdas-and-closures.md  10-tooling-and-debugging.md  11-typealiases-and-generics.md  12-traits-and-vm.md  13-bitwise-and-fixed-width.md  14-operator-precedence.md  15-higher-order-and-fn-types.md  16-project-layout-and-aster-toml.md  17-debugging-type-errors.md  18-ownership-philosophy.md  19-borrows-and-signatures.md  20-unsafe-and-raw-pointers.md  21-ffi-extern.md  22-stdlib-math-str-list.md  23-io-files.md  README.md  hello.aster
(+108 files in other folders)
