[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aster-lang"
version = "0.1.2"
description = "Aster language and toolchain scaffold"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-only" }
authors = [
  { name = "OpenAI GPT project scaffold" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
aster = "aster_lang.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aster_lang = ["stdlib/*.aster"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_unused_ignores = true
packages = ["aster_lang"]

[[tool.mypy.overrides]]
# native_modules.py uses lazy runtime imports to avoid circular dependencies;
# the resulting attribute access patterns are not amenable to static typing.
module = "aster_lang.native_modules"
ignore_errors = true

[[tool.mypy.overrides]]
# Test files use pytest decorators (e.g. skipif marks) that mypy cannot type
# through cleanly; suppress warn_unused_ignores so type: ignore comments work
# consistently across both standalone and pre-commit mypy invocations.
module = "tests.*"
warn_unused_ignores = false
